--- a/Jogos/Jogo02.html
+++ b/Jogos/Jogo02.html
@@ -13,7 +13,7 @@
 
     <h3>Frase embaralhada: A encogiloat promaxia uemq setá onlge e fasata qmue stáe rpeto.</h3>
 
-    <p>Resposta</p>
+    <p> A tecnologia aproxima quem está longe e apróxima quem está perto</p>
 
 </body>
 </html>
